Application Properties file code updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8090
 
 fauna.region=us
 fauna.secret=fnAFZ32o94AAQGs1jjTW3k2qxOyzHqheKtlBd9GS
+
+spring.security.user.name= user
+spring.security.user.password = test123
